# financial_trader

./: LLaMa3_Finance_Agent.ipynb  README.md  pyproject.toml
