[tool.poetry]
name = "financial-trader"
version = "0.1.0"
description = ""
authors = ["hellum55 <hellum.christian@gmail.com>"]
readme = "README.md"
packages = [{include = "financial_trader"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
